fixed hidden page titles on mobile

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,6 +1,6 @@
 section {
   min-height: 200px;
-  padding: 6% 0;
+  padding: 12% 0;
   background-color: #ccc;
 }
 
