--- a/src/float-grid.css
+++ b/src/float-grid.css
@@ -134,4 +134,8 @@
     padding: 12% 0;
   }
 
+  section {
+    padding: 6% 0;
+  }
+
 }
